# Open-GL-Engine

./: Basic.shader  CMakeLists.txt  README.org  compile-run  compile-run-clean  compile_commands.json  main.cpp
include/: IndexBuffer.h  Render.h  VertexBuffer.h
src/: IndexBuffer.cpp  IndexBuffer.h  Render.cpp  Render.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h
